--- a/variable_scope.ipynb
+++ b/variable_scope.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# 基礎から実践 TensorFlow 重み共有\n",
-    "TensorFlow での重み共有と tf.variable_scope() を動かしてみるノートブックです。\n",
+    "TensorFlow での重み共有と tf.variable_scope() を動かしてみるノートブックです。\n\n",
+    "[基礎から実践 TensorFlow 重み共有](https://qiita.com/halhorn/items/6805b1fd3f8ff74840df) の説明に用いたコードです。",
     "[公式：Variables](https://www.tensorflow.org/programmers_guide/variables)\n"
    ]
   },
