--- a/ishiki_detector.ipynb
+++ b/ishiki_detector.ipynb
@@ -291,24 +291,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "質問度  100.0% - 😎ミクシィグループは『新しい文化を創る』をミッションに掲げコミュニケーションを軸にした新しい価値の提供により新たな市場の創造に挑戦する企業グループです\n",
-      "質問度   83.4% - 😎データサイエンティストの宿命\n",
-      "質問度   99.9% - 😎世界の平和を保つため、我々は行動しなくてはならないのです\n",
-      "質問度   94.7% - 😎高負荷耐性な設計ができるエンジニアが求められている\n",
-      "質問度   79.2% - 😎我々もやらねばならぬのです\n",
-      "質問度  100.0% - 😎------------------------------\n",
-      "質問度   57.2% - 😎圧倒的当事者意識\n",
-      "質問度   27.1% - 😜学習率のDecayがちょっと遅くなっていると思いますがどのOptimizerを使っていますか\n",
-      "質問度    2.1% - 😜学習率のDecayがちょっと遅いけどOptimizerを使ってるん\n",
-      "質問度  100.0% - 😎------------------------------\n",
-      "質問度    2.6% - 😜ビール飲みたい\n",
-      "質問度   10.5% - 😜業務ほったらかして意識高い判定器作ってるんだけどこれ意識低くない\n",
-      "質問度    0.3% - 😜お腹へってるときに飯テロされると辛い\n",
-      "質問度   43.1% - 😜どうでもええからさっさと学習終われや\n",
-      "質問度    1.5% - 😜誕生日おめでとー\n",
-      "質問度    5.4% - 😜まじありえない\n",
-      "質問度    0.5% - 😜オカメインコとコザクラインコ、どっちがかわいいかまよううううううう\n",
-      "質問度   12.9% - 😜働きたくないでござる\n"
+      "意識高さ  100.0% - 😎ミクシィグループは『新しい文化を創る』をミッションに掲げコミュニケーションを軸にした新しい価値の提供により新たな市場の創造に挑戦する企業グループです\n",
+      "意識高さ   83.4% - 😎データサイエンティストの宿命\n",
+      "意識高さ   99.9% - 😎世界の平和を保つため、我々は行動しなくてはならないのです\n",
+      "意識高さ   94.7% - 😎高負荷耐性な設計ができるエンジニアが求められている\n",
+      "意識高さ   79.2% - 😎我々もやらねばならぬのです\n",
+      "意識高さ  100.0% - 😎------------------------------\n",
+      "意識高さ   57.2% - 😎圧倒的当事者意識\n",
+      "意識高さ   27.1% - 😜学習率のDecayがちょっと遅くなっていると思いますがどのOptimizerを使っていますか\n",
+      "意識高さ    2.1% - 😜学習率のDecayがちょっと遅いけどOptimizerを使ってるん\n",
+      "意識高さ  100.0% - 😎------------------------------\n",
+      "意識高さ    2.6% - 😜ビール飲みたい\n",
+      "意識高さ   10.5% - 😜業務ほったらかして意識高い判定器作ってるんだけどこれ意識低くない\n",
+      "意識高さ    0.3% - 😜お腹へってるときに飯テロされると辛い\n",
+      "意識高さ   43.1% - 😜どうでもええからさっさと学習終われや\n",
+      "意識高さ    1.5% - 😜誕生日おめでとー\n",
+      "意識高さ    5.4% - 😜まじありえない\n",
+      "意識高さ    0.5% - 😜オカメインコとコザクラインコ、どっちがかわいいかまよううううううう\n",
+      "意識高さ   12.9% - 😜働きたくないでござる\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
     "for text, result in pairs:\n",
     "    pos_rate = result[0]\n",
     "    prefix = '😎' if pos_rate > 0.5 else '😜'\n",
-    "    print('質問度 {: 6.1f}% - {}'.format(pos_rate * 100, prefix + text))    "
+    "    print('意識高さ {: 6.1f}% - {}'.format(pos_rate * 100, prefix + text))    "
    ]
   },
   {
