--- a/eager_test.ipynb
+++ b/eager_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,20 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: id=1, shape=(), dtype=float32, numpy=1.0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = tf.constant(1.)\n",
     "y = tf.constant(2.)\n",
@@ -57,26 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(3.0, shape=(), dtype=float32)\n",
-      "tf.Tensor(5.0, shape=(), dtype=float32)\n",
-      "tf.Tensor(8.0, shape=(), dtype=float32)\n",
-      "tf.Tensor(13.0, shape=(), dtype=float32)\n",
-      "tf.Tensor(21.0, shape=(), dtype=float32)\n",
-      "tf.Tensor(34.0, shape=(), dtype=float32)\n",
-      "tf.Tensor(55.0, shape=(), dtype=float32)\n",
-      "tf.Tensor(89.0, shape=(), dtype=float32)\n",
-      "tf.Tensor(144.0, shape=(), dtype=float32)\n",
-      "tf.Tensor(233.0, shape=(), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(10):\n",
     "    z = y\n",
@@ -94,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,15 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "graph mode elapsed: 1.3104174137115479\n",
-      "graph mode run: 0.4512958526611328\n"
+      "graph mode elapsed: 1.8623850345611572\n",
+      "graph mode run: 1.0190224647521973\n"
      ]
     }
    ],
@@ -145,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eager mode elapsed: 0.25153040885925293\n"
+      "eager mode elapsed: 0.23740339279174805\n"
      ]
     }
    ],
@@ -165,22 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:12<00:00,  4.00it/s]"
+      "100%|██████████| 50/50 [00:12<00:00,  3.95it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "graph mode elapsed: 13.499590873718262\n",
-      "0.340 0.236 0.237 0.238 0.240 0.237 0.239 0.236 0.236 0.236 0.244 0.239 0.247 0.245 0.248 0.249 0.246 0.246 0.249 0.250 0.249 0.251 0.244 0.245 0.248 0.250 0.248 0.247 0.252 0.243 0.249 0.249 0.250 0.252 0.254 0.249 0.250 0.251 0.258 0.258 0.255 0.256 0.255 0.255 0.262 0.256 0.256 0.252 0.252 0.256\n"
+      "graph mode elapsed: 13.353304862976074\n",
+      "0.336 0.236 0.237 0.238 0.238 0.239 0.234 0.231 0.237 0.236 0.238 0.239 0.241 0.242 0.239 0.240 0.240 0.239 0.241 0.241 0.245 0.246 0.242 0.244 0.252 0.248 0.248 0.246 0.248 0.249 0.247 0.248 0.248 0.247 0.248 0.249 0.250 0.250 0.249 0.249 0.250 0.249 0.252 0.251 0.252 0.252 0.252 0.254 0.253 0.253\n"
      ]
     },
     {
@@ -210,22 +182,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:21<00:00,  2.35it/s]"
+      "100%|██████████| 50/50 [00:21<00:00,  1.74it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eager mode elapsed: 21.26130485534668\n",
-      "0.255 0.260 0.264 0.268 0.277 0.280 0.289 0.360 0.302 0.308 0.316 0.320 0.335 0.342 0.350 0.356 0.362 0.371 0.377 0.385 0.392 0.407 0.411 0.415 0.427 0.429 0.434 0.440 0.447 0.451 0.460 0.468 0.474 0.482 0.488 0.498 0.504 0.511 0.518 0.525 0.541 0.549 0.537 0.557 0.562 0.570 0.579 0.587 0.592 0.608\n"
+      "eager mode elapsed: 21.258570671081543\n",
+      "0.250 0.258 0.264 0.272 0.278 0.284 0.291 0.297 0.304 0.316 0.327 0.336 0.342 0.348 0.355 0.363 0.369 0.375 0.374 0.377 0.395 0.402 0.408 0.407 0.414 0.419 0.425 0.432 0.439 0.445 0.453 0.457 0.466 0.474 0.481 0.488 0.495 0.502 0.513 0.519 0.525 0.534 0.540 0.547 0.554 0.562 0.569 0.576 0.583 0.589\n"
      ]
     },
     {
@@ -239,6 +211,7 @@
    "source": [
     "start = time.time()\n",
     "elapsed_list = []\n",
+    "result = calc()\n",
     "\n",
     "for i in tqdm(range(50)):\n",
     "    iter_start = time.time()\n",
@@ -247,6 +220,201 @@
     "print('eager mode elapsed:', time.time() - start)\n",
     "print(' '.join([f'{elapsed:.3f}' for elapsed in elapsed_list]))\n",
     "#print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = tf.get_default_graph()\n",
+    "g.get_operations()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# パフォーマンス（Model）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Calc(tf.keras.Model):\n",
+    "    def __init__(self):\n",
+    "        super(Calc, self).__init__()\n",
+    "        self.denses = [tf.keras.layers.Dense(units=256) for i in range(100)]\n",
+    "        \n",
+    "    def call(self, input):\n",
+    "        x = input\n",
+    "        for layer in self.denses:\n",
+    "            x = layer(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [00:10<00:00,  4.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eager mode elapsed: 10.831282377243042\n",
+      "0.212 0.213 0.213 0.214 0.213 0.214 0.216 0.216 0.214 0.215 0.259 0.222 0.215 0.218 0.217 0.217 0.215 0.210 0.215 0.215 0.211 0.210 0.214 0.214 0.214 0.214 0.212 0.215 0.214 0.214 0.209 0.215 0.219 0.215 0.211 0.214 0.214 0.214 0.212 0.215 0.212 0.214 0.215 0.262 0.221 0.215 0.215 0.215 0.215 0.215\n",
+      "tf.Tensor(\n",
+      "[[ 0.79088724 -0.37703872 -0.20463532 ...  0.13335949 -0.7566216\n",
+      "  -0.03036916]\n",
+      " [ 0.79088724 -0.37703872 -0.20463532 ...  0.13335949 -0.7566216\n",
+      "  -0.03036916]\n",
+      " [ 0.79088724 -0.37703872 -0.20463532 ...  0.13335949 -0.7566216\n",
+      "  -0.03036916]\n",
+      " ...\n",
+      " [ 0.79088724 -0.37703872 -0.20463532 ...  0.13335949 -0.7566216\n",
+      "  -0.03036916]\n",
+      " [ 0.79088724 -0.37703872 -0.20463532 ...  0.13335949 -0.7566216\n",
+      "  -0.03036916]\n",
+      " [ 0.79088724 -0.37703872 -0.20463532 ...  0.13335949 -0.7566216\n",
+      "  -0.03036916]], shape=(256, 256), dtype=float32)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "elapsed_list = []\n",
+    "#calc_model = Calc()\n",
+    "\n",
+    "for i in tqdm(range(50)):\n",
+    "    iter_start = time.time()\n",
+    "    input_ = tf.ones(shape=[256, 256], dtype=tf.float32)\n",
+    "#    result = calc_model(input_)\n",
+    "    result = Calc()(input_)\n",
+    "    elapsed_list.append(time.time() - iter_start)\n",
+    "print('eager mode elapsed:', time.time() - start)\n",
+    "print(' '.join([f'{elapsed:.3f}' for elapsed in elapsed_list]))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# autograph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "from tensorflow.contrib import autograph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def step_generator(input_: int):\n",
+    "    if input_ <= 0 or input_ > 10:\n",
+    "        return 0\n",
+    "    return input_ - 1\n",
+    "#    return input_ + np.random.choice([-1, 1])  # this occures ERROR on to_graph()\n",
+    "#    return input_ + random.randint(-1, 1)\n",
+    "\n",
+    "def loop_generator(i: int):\n",
+    "    i_list = [i]\n",
+    "#    while i != 0:  # this occures ERROR on run graph on graph-mode after to_graph()\n",
+    "    for _ in range(10):\n",
+    "#        if i == 0: # this occures ERROR on run graph on graph-mode after to_graph()\n",
+    "#            break\n",
+    "        i = step_generator(i)\n",
+    "        i_list.append(i)\n",
+    "    return i_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = loop_generator(tf.constant(1))\n",
+    "print('\\n'.join(['{}: {}'.format(i, type(i)) for i in result]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf_step_generator = autograph.to_graph(step_generator)\n",
+    "tf_loop_generator = autograph.to_graph(loop_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(autograph.to_code(loop_generator))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf_loop_generator(tf.constant(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.Session(graph=tf.Graph()) as sess:\n",
+    "    input_op = tf.constant(1)\n",
+    "    result = sess.run(tf_loop_generator(input_op))\n",
+    "    print(result)"
    ]
   },
   {
